--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,32 +1,64 @@
-upstream server {
-    server server:3000;
-}
-
-upstream client {
-    server client:8080;
-}
-
+##############################################################
+#  Use this block for the first run to get the certificates  #
+##############################################################
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    # server_name;
+    listen 80;
+    listen [::]:80;
 
     location / {
-        proxy_pass http://client;
-    }
-
-    location /api {
-      rewrite ^/api/?$ / break;
-      rewrite ^/api/(.*)$ /$1 break;
-      proxy_pass http://server;
-
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $host;
-      proxy_set_header X-NginX-Proxy true;
+        proxy_pass https://google.com;
     }
 
     location ~ /.well-known/acme-challenge {
         root /var/www/certbot;
     }
 }
+
+##############################################################
+#     Use this block after having got the certificates       #
+##############################################################
+
+# upstream server {
+#     server server:3000;
+# }
+
+# upstream client {
+#     server client:8080;
+# }
+
+#server {
+    #listen 80 default_server;
+    #listen [::]:80 default_server;
+
+    # server_name nguyenhoaithanh.tech www.nguyenhoaithanh.tech;
+
+    # location / {
+    #     proxy_pass http://client;
+    # }
+
+    # location /api {
+    #   rewrite ^/api/?$ / break;
+    #   rewrite ^/api/(.*)$ /$1 break;
+    #   proxy_pass http://server;
+
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-NginX-Proxy true;
+    # }
+
+    # location /socket.io {
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header Host $host;
+
+        #proxy_pass http://server;
+
+        #proxy_http_version 1.1;
+        #proxy_set_header Upgrade $http_upgrade;
+        #proxy_set_header Connection "upgrade";
+    #}
+
+    #location ~ /.well-known/acme-challenge {
+        #root /var/www/certbot;
+    #}
+#}
