--- a/apps/client/tsconfig.node.json
+++ b/apps/client/tsconfig.node.json
@@ -1,10 +1,26 @@
+// {
+//   "compilerOptions": {
+//     "composite": true,
+//     "skipLibCheck": true,
+//     "module": "ESNext",
+//     "moduleResolution": "bundler",
+//     "allowSyntheticDefaultImports": true
+//   },
+//   "include": ["vite.config.ts"]
+// }
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
+	// "extends": "tsconfig/vite.json",
+	"compilerOptions": {
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"allowJs": false,
+		"skipLibCheck": false,
+		"esModuleInterop": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"strictNullChecks": true,
+		"moduleResolution": "Node",
+		"isolatedModules": true,
+		"types": ["@types/jest"]
+	},
+	"include": ["./src", "./jest-setup.ts"]
 }
