--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -4,26 +4,60 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port $PORT",
+		"dev": "vite",
 		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"serve": "vite preview",
+		"test": "jest src",
+		"lint": "eslint \"src/**/*.ts\"",
+		"test:cover": "jest --coverage",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"dependencies": {
+		"nanoid": "^4.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"shared": "*"
+		"react-icons": "^4.9.0",
+		"react-transition-group": "^4.4.5",
+		"react-use": "^17.4.0",
+		"shared": "*",
+		"socket.io-client": "^4.6.1",
+		"typescript": "^5.1.3",
+		"valtio": "^1.10.5",
+		"wouter": "^2.11.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.22.5",
+		"@storybook/addon-actions": "^7.0.21",
+		"@storybook/addon-essentials": "^7.0.21",
+		"@storybook/addon-interactions": "^7.0.21",
+		"@storybook/addon-links": "^7.0.21",
+		"@storybook/blocks": "^7.0.21",
+		"@storybook/builder-vite": "^7.0.21",
+		"@storybook/react": "^7.0.21",
+		"@storybook/react-vite": "^7.0.21",
+		"@storybook/testing-library": "^0.1.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"@types/jest": "^29.5.2",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-transition-group": "^4.4.6",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
+		"autoprefixer": "^10.4.14",
+		"babel-loader": "^9.1.2",
 		"eslint": "^8.38.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
-		"typescript": "^5.0.2",
+		"eslint-plugin-storybook": "^0.6.12",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.5.0",
+		"postcss": "^8.4.24",
+		"prop-types": "^15.8.1",
+		"storybook": "^7.0.21",
+		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.9"
 	}
 }
