--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -1,6 +1,6 @@
-upstream server {
-    server server:3000;
-}
+# upstream server {
+#     server server:3000;
+# }
 
 upstream client {
     server client:8080;
@@ -14,14 +14,14 @@ server {
         proxy_pass http://client;
     }
 
-    location /api {
-      rewrite ^/api/?$ / break;
-      rewrite ^/api/(.*)$ /$1 break;
-      proxy_pass http://server;
+    # location /api {
+    #   rewrite ^/api/?$ / break;
+    #   rewrite ^/api/(.*)$ /$1 break;
+    #   proxy_pass http://server;
 
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $host;
-      proxy_set_header X-NginX-Proxy true;
-    }
+    #   proxy_set_header X-Real-IP $remote_addr;
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header Host $host;
+    #   proxy_set_header X-NginX-Proxy true;
+    # }
 }
