--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,17 +19,8 @@ services:
     build:
       context: .
       dockerfile: ./apps/client/Dockerfile
-      # target: development
-    volumes:
-      - ./client.env:/app/.env
     environment:
-      - VITE_PORT=80
-      - VITE_POLLS_NAMESPACE=polls
       - NODE_OPTIONS=--max-old-space-size=8192
-    # args:
-    # command: yarn workspace client dev
-    ports:
-      - 85:80
 
   server:
     container_name: server
@@ -47,7 +38,7 @@ services:
     container_name: reverse_proxy
     image: nginx:alpine
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/templates:/etc/nginx/templates
     ports:
       - '84:80'
     depends_on:
@@ -57,7 +48,7 @@ services:
       - SERVER_NAME=server
       - SERVER_PORT=3000
       - CLIENT_NAME=client
-      - CLIENT_PORT=8080
+      - CLIENT_PORT=80
 
 volumes:
   redisdata:
